@startuml
title Ingest 处理执行 ER / 领域模型图（当前实现）

skinparam shadowing false
skinparam linetype ortho

package "Domain" {
  class Document {
    +documentId: DocumentId
    +kbId: String
    +fileHash: String?
    +filename: String
    +fileSize: long
    +status: UploadStatus
    +failureReason: String?
    +createdAt: Instant
    +updatedAt: Instant
  }

  class DocumentChunkPreview {
    +chunkIndex: int
    +content: String
    +sourceFile: String
    +contentHash: String
    +splitVersion: String
  }

  class DocumentId {
    +value: String
  }

  enum UploadStatus {
    ACCEPTED
    UPLOADED
    INGESTING
    INDEXED
    FAILED
  }

  Document *-- DocumentId
  Document --> UploadStatus
}

package "PostgreSQL" {
  entity "ingest_documents" as T_DOC {
    * document_id : varchar(64) <<PK>>
    --
    * kb_id : varchar(128)
    file_hash : varchar(64)
    filename : varchar(512)
    * file_size : bigint
    * status : varchar(32)
    failure_reason : text
    * created_at : timestamptz
    * updated_at : timestamptz
    --
    UNIQUE INDEX uk_ingest_documents_kb_file_hash
    (kb_id, file_hash) WHERE file_hash IS NOT NULL
  }

  entity "vector_store" as T_VEC {
    * id : text <<PK>>
    --
    content : text
    metadata : json/jsonb
    embedding : vector(1536)
  }
}

package "File Storage" {
  entity "local_source_file" as T_SRC {
    * path : string <<PK>>
    * content : bytes
  }
}

T_DOC ||--o{ T_VEC : metadata.documentId
T_DOC ||--o{ T_SRC : {root}/{documentId}/{filename}

note right of T_VEC
metadata 最小字段：
- documentId
- kbId
- chunkIndex
- sourceFile
- contentHash
- splitVersion
end note

note bottom of T_VEC
id 使用确定性 chunkId：
hash(documentId, chunkIndex, splitVersion)
写入策略为 delete + add，满足幂等目标。
end note

@enduml
